2003-01-22 Zoran Vasiljevic <zoran@archiware.com>

	* generic/threadCmd.c: fixed reference to errorInfo
	when reporting error from the passed script.

2003-01-21  Mo DeJong  <mdejong@users.sourceforge.net>

	* configure: Regenerate to include recent fixes
	for mingw build support in tclconfig module.

2002-12-18 Zoran Vasiljevic <zoran@archiware.com>

	* README: added some AOLserver info
	* tcl/tpool/tpool.tcl: added missing tpool::names command

2002-12-14 Zoran Vasiljevic <zoran@archiware.com>

	* doc/*: finished docs for the 2.5 release

2002-12-09 Zoran Vasiljevic <zoran@archiware.com>

	* generic/threadPoolCmd.c: added tpool::names command
	added -exitscript for tpool::create

	* doc/tpool.tmml
	* doc/man/tpool.n
	* doc/html/tpool.html: added files. This is still the
	work in progress.

2002-12-06 Zoran Vasiljevic <zoran@archiware.com>

	* configure.in
	* configure
	* Makefile.in
	* aolserver.m4: added support for compilation under
	AOLserver as loadable module.

2002-12-06 Zoran Vasiljevic <zoran@archiware.com>

	* generic/threadSvCmd.c: the tsv::lock now allows
	for unsetting the shared array within the script argument.

	* generic/threadPoolCmd.c: fixed one missing mutex unlock
	in the ThreadRelease.

        * tcl/tpool/tpool.tcl: implemented missing API calls found
 	in the C-level implementation.

	* tcl/phttpd/phttpd.tcl: simplified switching to Tcl-level
	threadpool implementation. 	

2002-12-04 Zoran Vasiljevic <zoran@archiware.com>

	* generic/threadPoolcmd.c: rewritten to use
	worker threads sitting on the cond var instead of 
	in the event loop. The poster thread still respects
	i.e. does not block the event loop while posting jobs.

2002-12-03 Zoran Vasiljevic <zoran@archiware.com>

	* generic/tclthread.h: added SpliceIn/SpliceOut macros.
	Fixed to include exports from threadPoolCmd.c

	* generic/threadSpCmd.c: does regular namespace handling
	over the NS variable instead of hard-coding the "thread"
	prefix for mutex/cond commands.
